# DFM-Biologics

./: .env  .env.example  .gitignore  BUILD_COMPLETE.txt  CONTRIBUTING.md  EXAMPLES.md  FILE_MANIFEST.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt  start_frontend.py  streamlit_app.py  verify_installation.py
app_ui/: streamlit_app.py
app_ui/pages/: 1_Candidate_Input.py  2_Construct_Architecture.py  3_Manufacturability_Report.py
backend/: main.py  start.py
backend/api/: __init__.py  routes.py
backend/core/: checks_construct.py  checks_sequence.py  models.py  report.py  scoring.py  utils.py
backend/data/: codon_tables.json  vendor_rules.yaml
dfm_biologics/: FILE_MANIFEST.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt  streamlit_app.py
dfm_biologics.egg-info/: SOURCES.txt  requires.txt
dfm_biologics/app_ui/: streamlit_app.py
dfm_biologics/app_ui/pages/: 1_Candidate_Input.py
dfm_biologics/backend/: __init__.py
dfm_biologics/backend/api/: routes.py
dfm_biologics/backend/core/: checks_construct.py  models.py  scoring.py  utils.py
dfm_biologics/backend/data/: codon_tables.json
dfm_biologics/dfm_biologics.egg-info/: PKG-INFO  top_level.txt
dfm_biologics/tests/: __init__.py  test_scoring.py
tests/: test_checks.py  test_scoring.py
